fixed nav and pricing spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@
    margin:0 2% 20px;
  }
  @media (min-width: 468px) {
-   .pricing-item {
+   .pricing-tables {
       width: 75%;
       margin: 0 auto;
    }
@@ -64,6 +64,9 @@
    }
    .one-fourth {
      width:21%;
+   }
+   .box {
+      margin-top: 25px;
    }
  }
  @media (min-width: 1200px) {
@@ -146,6 +149,14 @@
    margin:3em auto 0;
    
  }
+ header .one-half {
+   width: 46%;
+   float: left;
+   
+ }
+ header .one-half ul {
+   padding: 0;
+ }
 
  /* BUTTONS */
  .btn {
@@ -200,6 +211,7 @@
 }
 .pricing ul {
    list-style-type: none;
+   padding: 0;
 }
 .box {
    padding: 0 15px 15px;
@@ -207,7 +219,6 @@
    box-shadow: 0px 2px 4px 0px rgba(0,0,0.20);
    min-height: 439px;
    position: relative;
-   margin-top: 25px;
 }
 .box.middle {
    min-height: 485px;
